[TD] Systeme de mort (First Pass)

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,11 +75,8 @@ MultipleInstancePositions=(X=640,Y=340)
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Ingredients/Ingredients/Scie.Scie
-OpenAssetsAtExit=/Game/Ingredients/Ingredients/Coin.Coin
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/(PRG)Jonathan/Head.Head
+CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -995,6 +992,12 @@ SceneOutliner.TimeStamp=2020.10.26-19.35.39
 SceneOutliner.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2020.10.26-19.35.33
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2020.10.26-16.11.48
+BlueprintGraph.LastCompileMethod=Unknown
+Voice.TimeStamp=2020.10.26-16.11.54
+Voice.LastCompileMethod=Unknown
+MovieSceneCapture.TimeStamp=2020.10.26-16.11.51
+MovieSceneCapture.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1052,16 +1055,17 @@ K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,
 ThirdPersonCharacter_C=
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem1=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
-MRUItem2=/Game/(PRG)Jonathan/aaah
-MRUItem3=/Game/(PRG)Jonathan/Mats/Red
-MRUItem4=/Game/(PRG)Jonathan/Head
-MRUItem5=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
-MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem7=/Game/Ingredients/Ingredients/Coin
-MRUItem8=/Game/Ingredients/Ingredients/Scie
-MRUItem9=/Game/(PRG)Jonathan/Blueprint
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem1=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem2=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
+MRUItem3=/Game/(PRG)Jonathan/aaah
+MRUItem4=/Game/(PRG)Jonathan/Mats/Red
+MRUItem5=/Game/(PRG)Jonathan/Head
+MRUItem6=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/Ingredients/Ingredients/Coin
+MRUItem9=/Game/Ingredients/Ingredients/Scie
+MRUItem10=/Game/(PRG)Jonathan/Blueprint
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -1448,6 +1452,14 @@ ClothPaintTool_BrushSettings.ToolSettings=True
 Coin_C.TransformCommon=True
 EditorKeyboardShortcutSettings.AnimationEditor=True
 EditorKeyboardShortcutSettings.ClothAssetList=True
+ThirdPersonGameMode_C.Tick=True
+ThirdPersonGameMode_C.Default=True
+ThirdPersonGameMode_C.Classes=True
+ThirdPersonGameMode_C.Game=True
+ThirdPersonGameMode_C.GameMode=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1599,7 +1611,7 @@ ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [DetailCategoriesAdvanced]
 BoxComponent.Collision=True
