[LD] FIX -> Bucket Logic
Can properly switch between being full and empty.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -77,7 +77,9 @@ LastLevel=/Game/(LD)Gaetan/LevelGaetan
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/(LD)Gaetan/LevelGaetan.LevelGaetan:PersistentLevel.LevelGaetan
 OpenAssetsAtExit=/Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -123,10 +125,11 @@ CurrentPosGridSize=0
 
 [MRU]
 MRUItem0=/Game/(LD)Gaetan/LevelGaetan
-MRUItem1=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem1=/Game/(ND)Yohan/LevelYohan
+MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/(PRG)Everyone
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1143,23 +1146,24 @@ SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,
 MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/(LD)Gaetan/LevelGaetan
+MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
 MRUItem1=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem4=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem5=/Game/(LD)Gaetan/SphereTest
-MRUItem6=/Game/(PRG)Everyone/Bucket
-MRUItem7=/Game/(PRG)Everyone/Spawners
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem9=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
-MRUItem10=/Game/(PRG)Jonathan/aaah
-MRUItem11=/Game/(PRG)Jonathan/Mats/Red
-MRUItem12=/Game/(PRG)Jonathan/Head
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
-MRUItem14=/Game/Ingredients/Ingredients/Coin
-MRUItem15=/Game/Ingredients/Ingredients/Scie
-MRUItem16=/Game/(PRG)Jonathan/Blueprint
+MRUItem2=/Game/(LD)Gaetan/LevelGaetan
+MRUItem3=/Game/(ND)Yohan/LevelYohan
+MRUItem4=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem6=/Game/(LD)Gaetan/SphereTest
+MRUItem7=/Game/(PRG)Everyone/Bucket
+MRUItem8=/Game/(PRG)Everyone/Spawners
+MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem10=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
+MRUItem11=/Game/(PRG)Jonathan/aaah
+MRUItem12=/Game/(PRG)Jonathan/Mats/Red
+MRUItem13=/Game/(PRG)Jonathan/Head
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
+MRUItem15=/Game/Ingredients/Ingredients/Coin
+MRUItem16=/Game/Ingredients/Ingredients/Scie
+MRUItem17=/Game/(PRG)Jonathan/Blueprint
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -1201,7 +1205,7 @@ StaticMeshComponent.Sockets=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Materials=True
 StaticMeshComponent.Physics=True
-StaticMeshComponent.Collision=False
+StaticMeshComponent.Collision=True
 StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.Navigation=True
@@ -1948,6 +1952,38 @@ TextRenderComponent.Tags=True
 TextRenderComponent.ComponentReplication=True
 TextRenderComponent.Cooking=True
 TextRenderComponent.Events=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.MasterPoseComponent=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.SkinWeights=True
+SkeletalMeshActor.Navigation=True
+SkeletalMeshActor.VirtualTexture=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+CameraActor.TransformCommon=True
+CameraActor.CameraSettings=True
+CameraActor.CameraOptions=True
+CameraActor.AutoPlayerActivation=True
+CameraActor.Camera=True
+CameraActor.PostProcess=True
+CameraActor.Tags=True
+CameraActor.Activation=True
+CameraActor.Collision=True
+CameraActor.Cooking=True
+CameraActor.Replication=True
+CameraActor.Actor=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1965,6 +2001,7 @@ bHideUnrelatedNodes=False
 /Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton.SK_FantasyMiniCharacter_Skeleton=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Mannequin/Animations/ThirdPersonIdle.ThirdPersonIdle;
 RecentlyPlaced=/Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
@@ -2152,7 +2189,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -2170,9 +2207,9 @@ AutomationTestSettings="\"Object.Automation.BuildPromotionTest\" \"Object.Automa
 LogVisualizerSettings="\"Object.VisualLogger.GraphsBackgroundColor\" "
 StaticMeshComponent=
 MeshComponent=
-PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
@@ -2181,6 +2218,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Console.ConsoleKeys\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2200,6 +2238,7 @@ StaticMeshComponent.Physics=True
 BoxComponent.Physics=True
 SceneComponent.Rendering=True
 TextRenderComponent.Text=True
+TriggerBox.Collision=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
