[TD] Coin Display above Players

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -72,14 +72,11 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=640,Y=340)
 
 [EditorStartup]
-LastLevel=/Game/(LD)Gaetan/LevelGaetan
+LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/(LD)Gaetan/LevelGaetan.LevelGaetan:PersistentLevel.LevelGaetan
-OpenAssetsAtExit=/Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -129,7 +126,7 @@ MRUItem1=/Game/(ND)Yohan/LevelYohan
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -194,7 +191,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
+UNR=G:/Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
 BRUSH=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBX=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBXAnim=../../../../../../Fork/Bone_To_Be_Bad/Content/
@@ -1066,7 +1063,7 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 Head_C=StaticMeshComponent.Physics.ConstraintsGroup,
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
-ThirdPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+ThirdPersonCharacter_C=
 Bucket_C=
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BoxComponent=BoxComponent.Collision.Collision,
@@ -1144,18 +1141,19 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,
 StaticMeshActor=StaticMeshActor.Collision.Collision,
 SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,
 MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+ThirdPersonGameMode_C=
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem2=/Game/(LD)Gaetan/LevelGaetan
-MRUItem3=/Game/(ND)Yohan/LevelYohan
-MRUItem4=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem6=/Game/(LD)Gaetan/SphereTest
-MRUItem7=/Game/(PRG)Everyone/Bucket
-MRUItem8=/Game/(PRG)Everyone/Spawners
-MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem1=/Game/(LD)Gaetan/LevelGaetan
+MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem3=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem4=/Game/(ND)Yohan/LevelYohan
+MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem6=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem7=/Game/(LD)Gaetan/SphereTest
+MRUItem8=/Game/(PRG)Everyone/Bucket
+MRUItem9=/Game/(PRG)Everyone/Spawners
 MRUItem10=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
 MRUItem11=/Game/(PRG)Jonathan/aaah
 MRUItem12=/Game/(PRG)Jonathan/Mats/Red
@@ -1999,6 +1997,7 @@ bHideUnrelatedNodes=False
 /Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
 /Game/(LD)Gaetan/LevelGaetan.LevelGaetan:PersistentLevel.LevelGaetan=1
 /Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton.SK_FantasyMiniCharacter_Skeleton=1
+/Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/Mannequin/Animations/ThirdPersonIdle.ThirdPersonIdle;
@@ -2218,7 +2217,7 @@ PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Console.ConsoleKeys\" "
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshActor=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
