[TD] Skeleton Run and Headbutt Animations

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,6 +70,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=640,Y=340)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -77,6 +78,9 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton.AnimBP_Skeleton
+OpenAssetsAtExit=/Game/AnimTest/Headbutt_v2.Headbutt_v2
+OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -126,7 +130,7 @@ MRUItem1=/Game/(ND)Yohan/LevelYohan
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/AnimTest
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1009,6 +1013,10 @@ SkeletonEditor.TimeStamp=2020.10.26-19.35.39
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2020.10.26-19.35.37
 PinnedCommandList.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2020.10.26-16.11.47
+AnimationEditor.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2020.10.26-16.11.53
+SequencerWidgets.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1142,26 +1150,30 @@ StaticMeshActor=StaticMeshActor.Collision.Collision,
 SkeletalMesh=StaticMeshComponent.Physics.ConstraintsGroup,
 MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 ThirdPersonGameMode_C=
+Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+AnimBP_Skeleton_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/(LD)Gaetan/LevelGaetan
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem3=/Game/(PRG)Everyone/MonSuperSeau
-MRUItem4=/Game/(ND)Yohan/LevelYohan
-MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem6=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem7=/Game/(LD)Gaetan/SphereTest
-MRUItem8=/Game/(PRG)Everyone/Bucket
-MRUItem9=/Game/(PRG)Everyone/Spawners
-MRUItem10=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
-MRUItem11=/Game/(PRG)Jonathan/aaah
-MRUItem12=/Game/(PRG)Jonathan/Mats/Red
-MRUItem13=/Game/(PRG)Jonathan/Head
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonController
-MRUItem15=/Game/Ingredients/Ingredients/Coin
-MRUItem16=/Game/Ingredients/Ingredients/Scie
-MRUItem17=/Game/(PRG)Jonathan/Blueprint
+MRUItem0=/Game/AnimTest/Headbutt_v2
+MRUItem1=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem2=/Game/AnimTest/Headbutt_Montage
+MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem4=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
+MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
+MRUItem6=/Game/AnimTest/Idle
+MRUItem7=/Game/AnimTest/Headbutt
+MRUItem8=/Game/AnimTest/Idle1
+MRUItem9=/Game/AnimTest/Kick_new
+MRUItem10=/Game/AnimTest/Running
+MRUItem11=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem13=/Game/(LD)Gaetan/LevelGaetan
+MRUItem14=/Game/(PRG)Everyone/MonSuperSeau
+MRUItem15=/Game/(ND)Yohan/LevelYohan
+MRUItem16=/Game/(LD)Gaetan/SphereTest
+MRUItem17=/Game/(PRG)Everyone/Bucket
+MRUItem18=/Game/(PRG)Everyone/Spawners
+MRUItem19=/Game/(PRG)Jonathan/aaah
 
 [DetailCategories]
 Blueprint_C.Tick=True
@@ -1982,6 +1994,46 @@ CameraActor.Collision=True
 CameraActor.Cooking=True
 CameraActor.Replication=True
 CameraActor.Actor=True
+AnimBP_Skeleton_C.Default=True
+AnimBP_Skeleton_C.RootMotion=True
+AnimBP_Skeleton_C.Notifies=True
+AnimSequence.Animation=True
+AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=True
+AnimSequence.RootMotion=True
+AnimSequence.ImportSettings=True
+AnimSequence.Transform=True
+AnimSequence.Miscellaneous=True
+AnimSequence.File Path=True
+AnimSequence.MetaData=True
+AnimSequence.Thumbnail=True
+AnimStateTransitionNode.Transition=True
+AnimStateTransitionNode.BlendSettings=True
+AnimStateTransitionNode.Events=True
+AnimStateTransitionNode.Notifications=True
+AnimStateNode.GraphNodeDetail=True
+AnimStateNode.Animation State=True
+AnimGraphNode_StateMachine.GraphNodeDetail=True
+AnimGraphNode_StateMachine.Settings=True
+PersonaPreviewSceneDescription.Animation=True
+PersonaPreviewSceneDescription.Mesh=True
+PersonaPreviewSceneDescription.Additional Meshes=True
+AssetViewerSettings.Settings=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+Headbutt_Montage_C.RootMotion=True
+Headbutt_Montage_C.Notifies=True
+EditorCompositeSection.Section=True
+EditorCompositeSection.AnimLink=True
+EditorAnimSegment.Animation Segment=True
+EditorAnimSegment.Montage=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_SaveCachedPose.GraphNodeDetail=True
+AnimGraphNode_SaveCachedPose.CachedPose=True
+AnimGraphNode_LayeredBoneBlend.Config=True
+AnimGraphNode_LayeredBoneBlend.Runtime=True
+AnimGraphNode_LayeredBoneBlend.Performance=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -1994,10 +2046,17 @@ bHideUnrelatedNodes=False
 /Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton.BS_CharacterSkeleton=0
 /Game/(PRG)Everyone/Spawners.Spawners=1
 /Game/(PRG)Everyone/Bucket.Bucket=1
-/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/(LD)Gaetan/LevelGaetan.LevelGaetan:PersistentLevel.LevelGaetan=1
-/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton.SK_FantasyMiniCharacter_Skeleton=1
+/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton.SK_FantasyMiniCharacter_Skeleton=0
 /Game/(PRG)Everyone/MonSuperSeau.MonSuperSeau=1
+/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode=0
+/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton.AnimBP_Skeleton=1
+/Game/AnimTest/Idle.Idle=0
+/Game/AnimTest/Running.Running=1
+/Game/AnimTest/Kick_new.Kick_new=0
+/Game/AnimTest/Headbutt.Headbutt=0
+/Game/AnimTest/Headbutt_v2.Headbutt_v2=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Mannequin/Animations/ThirdPersonIdle.ThirdPersonIdle;
@@ -2020,6 +2079,8 @@ Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="SkeletonEditor.Viewport0",Commands=)
+Contexts=(Name="AnimationBlueprintEditor",Commands=)
+Contexts=(Name="AnimationBlueprintEditor.Viewport0",Commands=)
 
 [MaterialEditor]
 PrimType=1
@@ -2188,7 +2249,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object=
+Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -2210,7 +2271,7 @@ PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+ShapeComponent=
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2218,6 +2279,11 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Console.ConsoleKeys\" "
 StaticMeshActor=
+AnimGraphNode_LayeredBoneBlend="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" "
+AnimGraphNode_Base=
+K2Node=
+EdGraphNode=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2238,9 +2304,14 @@ BoxComponent.Physics=True
 SceneComponent.Rendering=True
 TextRenderComponent.Text=True
 TriggerBox.Collision=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
+
+[/Script/UnrealEd.AnimationBlueprintEditorOptions]
+bHideUnrelatedNodes=False
 
