[LD] Water Chores: ultra rough version playable.
Located in "(LD)Gaetan", prolly barely playable but hey

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -73,13 +73,11 @@ MultipleInstancePositions=(X=640,Y=340)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+LastLevel=/Game/(LD)Gaetan/LevelGaetan
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton.AnimBP_Skeleton
-OpenAssetsAtExit=/Game/AnimTest/Headbutt_v2.Headbutt_v2
 OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
@@ -130,7 +128,7 @@ MRUItem1=/Game/(ND)Yohan/LevelYohan
 MRUItem2=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/AnimTest
+ContentBrowserTab1.SelectedPaths=/Game/(LD)Gaetan
 ContentBrowserTab1.SourcesExpanded=False
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -195,7 +193,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=G:/Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
+UNR=../../../../../../Fork/Bone_To_Be_Bad/Content/(LD)Gaetan
 BRUSH=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBX=../../../../../../Fork/Bone_To_Be_Bad/Content/
 FBXAnim=../../../../../../Fork/Bone_To_Be_Bad/Content/
@@ -1154,20 +1152,20 @@ Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Colli
 AnimBP_Skeleton_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AnimTest/Headbutt_v2
-MRUItem1=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
-MRUItem2=/Game/AnimTest/Headbutt_Montage
-MRUItem3=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem4=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
-MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
-MRUItem6=/Game/AnimTest/Idle
-MRUItem7=/Game/AnimTest/Headbutt
-MRUItem8=/Game/AnimTest/Idle1
-MRUItem9=/Game/AnimTest/Kick_new
-MRUItem10=/Game/AnimTest/Running
-MRUItem11=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
-MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem13=/Game/(LD)Gaetan/LevelGaetan
+MRUItem0=/Game/(LD)Gaetan/LevelGaetan
+MRUItem1=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem2=/Game/AnimTest/Headbutt_v2
+MRUItem3=/Game/PolygonFanMiniChr/Models/Characters/SK_FantasyMiniCharacter_Skeleton
+MRUItem4=/Game/AnimTest/Headbutt_Montage
+MRUItem5=/Game/PolygonFanMiniChr/Models/Characters/BS_CharacterSkeleton
+MRUItem6=/Game/PolygonFanMiniChr/Models/Characters/AnimBP_Skeleton
+MRUItem7=/Game/AnimTest/Idle
+MRUItem8=/Game/AnimTest/Headbutt
+MRUItem9=/Game/AnimTest/Idle1
+MRUItem10=/Game/AnimTest/Kick_new
+MRUItem11=/Game/AnimTest/Running
+MRUItem12=/Game/PolygonFanMiniChr/Models/Characters/SK_Dungeon_Skeleton_01
+MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
 MRUItem14=/Game/(PRG)Everyone/MonSuperSeau
 MRUItem15=/Game/(ND)Yohan/LevelYohan
 MRUItem16=/Game/(LD)Gaetan/SphereTest
@@ -2290,7 +2288,7 @@ ChangeVariableType_Warning=False
 DeleteVariableInUse_Warning=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LoadErrors
 
 [DetailCategoriesAdvanced]
 BoxComponent.Collision=True
