[TD] Distinguishing Players w/ Spotlight (FP)
Nothing too big for now, but the basis could allow for more nuanced changes, such as adding meshes to the player on spawning?

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,7 +69,7 @@ LastExecutedLaunchName=DESKTOP-K5HTRQ0
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=640,Y=340)
+MultipleInstancePositions=(X=320,Y=160)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [EditorStartup]
@@ -1067,11 +1067,11 @@ bTimelineDisplayCurveKeys=False
 [DetailCustomWidgetExpansion]
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Head_C=StaticMeshComponent.Physics.ConstraintsGroup,
-K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
-K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
+K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 ThirdPersonCharacter_C=
 Bucket_C=
-PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,
 BoxComponent=BoxComponent.Collision.Collision,
 CryptoKeysSettings=InputSettings.Bindings.ActionMappings,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings,
@@ -1150,6 +1150,7 @@ MonSuperSeau_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.
 ThirdPersonGameMode_C=
 Character=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,BoxComponent.Collision.Collision,
 AnimBP_Skeleton_C=StaticMeshComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,
+CameraActor=CameraActor.PostProcess.Lens,CameraActor.PostProcess.Lens|Camera,CameraActor.PostProcess.Lens|Image Effects,CameraActor.PostProcess.Lens|Mobile Depth of Field,CameraActor.PostProcess.Rendering Features,
 
 [ContentBrowserRecent]
 MRUItem0=/Game/(LD)Gaetan/LevelGaetan
@@ -2032,6 +2033,30 @@ AnimGraphNode_SaveCachedPose.CachedPose=True
 AnimGraphNode_LayeredBoneBlend.Config=True
 AnimGraphNode_LayeredBoneBlend.Runtime=True
 AnimGraphNode_LayeredBoneBlend.Performance=True
+DecalComponent.Variable=True
+DecalComponent.TransformCommon=True
+DecalComponent.Sockets=True
+DecalComponent.Decal=True
+DecalComponent.Rendering=True
+DecalComponent.Tags=True
+DecalComponent.ComponentReplication=True
+DecalComponent.Cooking=True
+DecalComponent.Events=True
+SpotLightComponent.Variable=True
+SpotLightComponent.TransformCommon=True
+SpotLightComponent.Sockets=True
+SpotLightComponent.Light=True
+SpotLightComponent.Rendering=True
+SpotLightComponent.Lightmass=True
+SpotLightComponent.Performance=True
+SpotLightComponent.LightFunction=True
+SpotLightComponent.DistanceFieldShadows=True
+SpotLightComponent.Light Profiles=True
+SpotLightComponent.RayTracing=True
+SpotLightComponent.Tags=True
+SpotLightComponent.ComponentReplication=True
+SpotLightComponent.Cooking=True
+SpotLightComponent.Events=True
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -2247,7 +2272,7 @@ WmfMediaSettings=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.SelectionColor\" \"Object.Colors.PressedSelectionColor\" \"Object.Colors.InactiveSelectionColor\" \"Object.Colors.KeyboardFocusColor\" \"Object.Colors.EditorWindowBackgroundColor\" \"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorMainWindowBackgroundOverride.TintColor\" \"Object.Colors.EditorChildWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride.TintColor\" \"Object.Graphs.RegularColor\" \"Object.Graphs.RuleColor\" \"Object.Graphs.CenterColor\" \"Object.Output Log.LogBackgroundColor\" \"Object.Output Log.LogSelectionBackgroundColor\" \"Object.Output Log.LogNormalColor\" \"Object.Output Log.LogCommandColor\" \"Object.Output Log.LogWarningColor\" \"Object.Output Log.LogErrorColor\" "
-Object="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
 EditorTutorialSettings="\"Object.Tutorials.Categories\" \"Object.Tutorials.TutorialContexts\" \"Object.Tutorials.TutorialContexts.TutorialContexts[0]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[1]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[2]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[3]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[4]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[5]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[6]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[7]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[8]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[9]\" \"Object.Tutorials.TutorialContexts.TutorialContexts[10]\" "
 LevelEditorPlaySettings="\"Object.Multiplayer Options.NetworkEmulationSettings\" \"Object.Multiplayer Options.NetworkEmulationSettings.OutPackets\" \"Object.Multiplayer Options.NetworkEmulationSettings.InPackets\" \"Object.Multiplayer Options.Multiplayer Options|Client\" \"Object.Multiplayer Options.Multiplayer Options|Server\" "
@@ -2282,6 +2307,9 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base=
 K2Node=
 EdGraphNode=
+ThirdPersonCharacter_C=
+Character=
+Pawn=
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -2312,4 +2340,7 @@ OnlyBuildVisibility=False
 
 [/Script/UnrealEd.AnimationBlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[SelectionDetails]
+DecalSize_PreserveScaleRatio=False
 
